# integreat-compass

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  NOTICE.md  README.md  integreat-compass-cli.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tsconfig.json  webpack.config.js
.circleci/: config.yml
.circleci/scripts/: create_release.py  get_access_token.py  get_contributors.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
docs/: Makefile
docs/src/: code-style-guidelines.rst  conf.py  continuous-integration.rst  dev-server.rst  dev-tools.rst  documentation.rst  git-workflow.rst  index.rst  installation.rst  internationalization.rst  packaging.rst  prod-server.rst
docs/src/ref/: integreat_compass.cms.models.rst  integreat_compass.cms.rst  integreat_compass.core.rst  integreat_compass.rst
docs/src/static/: custom.css
integreat_compass/: __init__.py  integreat-compass-cli  settings.py  urls.py  wsgi.py
integreat_compass/cms/: admin.py  apps.py  decorators.py
integreat_compass/cms/constants/: allowed_media.py  group_names.py  namespaces.py  offer_group_types.py  offer_mode_types.py  offer_version_states.py  organization_types.py
integreat_compass/cms/fixtures/: permissions.json  test_data.json
integreat_compass/cms/forms/: __init__.py  custom_model_form.py  registration_form.py
integreat_compass/cms/forms/authentication/: password_reset_request_form.py  registration_form.py
integreat_compass/cms/forms/interactions/: __init__.py  report_form.py  vote_form.py
integreat_compass/cms/forms/offers/: __init__.py  contact_form.py  document_upload_form.py  location_form.py  offer_form.py  offer_version_form.py  organization_form.py
integreat_compass/cms/migrations/: 0001_initial.py  0002_alter_document_file.py  0002_offerversion_add_created_at.py
integreat_compass/cms/models/: __init__.py  validators.py
integreat_compass/cms/models/interactions/: __init__.py  comment.py  favorite.py  report.py  vote.py
integreat_compass/cms/models/offers/: __init__.py  document.py  language.py  offer.py  offer_version.py  tag.py
integreat_compass/cms/models/organizations/: __init__.py  contact.py  location.py  organization.py
integreat_compass/cms/models/users/: __init__.py  user.py
integreat_compass/cms/templates/: _base.html  _raw.html  index.html  login.html
integreat_compass/cms/templates/authentication/: login.html  password_reset_confirm.html  password_reset_request.html  registration.html
integreat_compass/cms/templates/components/: decline_list.html  report_list.html
integreat_compass/cms/templates/emails/: _base_email.html  activation_email.html  activation_email.txt  password_reset_email.html  password_reset_email.txt
integreat_compass/cms/templates/includes/: dashboard_navbar.html
integreat_compass/cms/templates/interactions/: decline_list.html  offer_report.html  report_list.html  vote_form.html
integreat_compass/cms/templates/layover/: offer-detail-layover.html
integreat_compass/cms/templates/offers/: document_deletion.html  image_picker.html  my_offers_list.html  offer_form.html  offer_report.html
integreat_compass/cms/templates/overlay/: offer-detail-overlay.html  offer_application_overlay.html  offer_detail_overlay.html  report-detail-overlay.html
integreat_compass/cms/urls/: __init__.py  protected.py  public.py
integreat_compass/cms/utils/: account_activation_token_generator.py  email_utils.py  token_generator.py
integreat_compass/cms/views/: __init__.py  index.py
integreat_compass/cms/views/authentication/: __init__.py  account_activation_view.py  password_reset_confirm_view.py  password_reset_request_view.py  registration_view.py
integreat_compass/cms/views/components/: __init__.py  decline_list_view.py  report_list_view.py
integreat_compass/cms/views/interactions/: __init__.py  decline_list_view.py  offer_comments.py  offer_report_view.py  report_list_view.py  vote_actions.py  vote_form_view.py
integreat_compass/cms/views/offers/: __init__.py  my_offers_list_view.py  offer_delete_view.py  offer_form_view.py  offer_report_view.py
integreat_compass/core/: apps.py  circleci_settings.py  docker_settings.py  logging_formatter.py  settings.py  urls.py  wsgi.py
integreat_compass/core/middleware/: __init__.py  access_control_middleware.py
integreat_compass/core/signals/: __init__.py  vote_signals.py
integreat_compass/locale/de/LC_MESSAGES/: django.po
integreat_compass/static/src/: index.ts
integreat_compass/static/src/css/: style.scss
integreat_compass/static/src/js/: application-overlay.ts  comments.ts  confirm-deletion.ts  display_filenames.ts  field-validation.ts  filter.ts  image_picker.ts  map.ts  messages.ts  nominatim.ts  offer-details.ts  report-details.ts
integreat_compass/static/src/js/utils/: create-icons.ts
integreat_compass/static/src/types/: index.d.ts
tests/: conftest.py
tests/cms/: test_dummy.py  test_index.py  test_login.py
tests/cms/views/: test_view_status_code.py  utils.py  view_config.py
tests/cms/views/interactions/: test_vote_action.py  test_vote_form_view.py
tools/: _functions.sh  black.sh  check_translations.sh  code_style.sh  djlint.sh  eslint.sh  install.sh  integreat-compass-cli  isort.sh  loadtestdata.sh  make_docs.sh  migrate.sh  prettier.sh  prune_database.sh  pylint.sh  resolve_translation_conflicts.sh  run.sh  test.sh  translate.sh  update_dependencies.sh
tools/utils/: _functions.sh  docker.sh  logging.sh  permissions.sh
