[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "integreat-compass"
description = "A digital platform aimed at improving the integration of refugees and migrants into German society and the labor market."
authors = [
    { name = "Tür an Tür – Digitalfabrik gGmbH", email = "tech@integreat-app.de" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django>=4.2,<5.0",
    "django-debug-toolbar",
    "django-webpack-loader",
    "django-widget-tweaks",
    "pillow",
    "psycopg[binary]",
    "python-magic",
]
keywords = ["integration", "Compass", "Integreat"]
license = { text = "Apache2 2.0 License" }
requires-python = ">=3.9"
dynamic = ["version"]


[project.optional-dependencies]
dev = [
    "black",
    "build",
    "bumpver",
    "djlint",
    "isort",
    "looseversion",
    "pylint",
    "pylint-django",
    "pylint-per-file-ignores",
    "pytest-circleci-parallelized",
    "pytest-cov",
    "pytest-django",
    "pytest-testmon",
    "pytest-xdist",
    "pytest-icdiff",
    "sphinx",
    "sphinxcontrib-django",
    "sphinx-last-updated-by-git",
    "sphinx-rtd-theme",
    "twine",
]
pinned = [
    "asgiref==3.6.0",
    "Django==4.2.1",
    "django-debug-toolbar==4.1.0",
    "django-webpack-loader==1.8.1",
    "django-widget-tweaks==1.4.12",
    "pillow==9.5.0",
    "psycopg==3.1.9",
    "psycopg-binary==3.1.9",
    "python-magic==0.4.27",
    "sqlparse==0.4.4",
    "typing_extensions==4.5.0",
]
dev-pinned = [
    "alabaster==0.7.13",
    "astroid==2.15.5",
    "Babel==2.12.1",
    "black==23.3.0",
    "build==0.10.0",
    "bumpver==2023.1124",
    "certifi==2023.5.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "coverage==7.2.5",
    "cssbeautifier==1.14.7",
    "dill==0.3.6",
    "djlint==1.28.0",
    "docutils==0.18.1",
    "EditorConfig==0.12.3",
    "exceptiongroup==1.1.1",
    "execnet==1.9.0",
    "html-tag-names==0.1.2",
    "html-void-elements==0.1.0",
    "icdiff==2.0.6",
    "idna==3.4",
    "imagesize==1.4.1",
    "importlib-metadata==6.6.0",
    "iniconfig==2.0.0",
    "isort==5.12.0",
    "Jinja2==3.1.2",
    "jsbeautifier==1.14.7",
    "json5==0.9.14",
    "lazy-object-proxy==1.9.0",
    "lexid==2021.1006",
    "looseversion==1.1.2",
    "MarkupSafe==2.1.2",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "packaging==23.1",
    "pathlib2==2.3.7.post1",
    "pathspec==0.11.1",
    "platformdirs==3.5.1",
    "pluggy==1.0.0",
    "pprintpp==0.4.0",
    "Pygments==2.15.1",
    "pylint==2.17.4",
    "pylint-django==2.5.3",
    "pylint-per-file-ignores==1.2.1",
    "pylint-plugin-utils==0.8.2",
    "pyproject_hooks==1.0.0",
    "pytest==7.3.1",
    "pytest-circleci-parallelized==0.1.0",
    "pytest-cov==4.0.0",
    "pytest-django==4.5.2",
    "pytest-icdiff==0.6",
    "pytest-testmon==2.0.8",
    "pytest-xdist==3.3.1",
    "PyYAML==6.0",
    "regex==2023.5.5",
    "requests==2.30.0",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "Sphinx==6.2.1",
    "sphinxcontrib-applehelp==1.0.4",
    "sphinxcontrib-devhelp==1.0.2",
    "sphinxcontrib-django==2.3",
    "sphinxcontrib-htmlhelp==2.0.1",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.3",
    "sphinxcontrib-serializinghtml==1.1.5",
    "sphinx-last-updated-by-git==0.3.5",
    "sphinx-rtd-theme==1.2.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.11.8",
    "tqdm==4.65.0",
    "twine==4.0.2",
    "urllib3==2.0.2",
    "wrapt==1.15.0",
    "zipp==3.15.0",
]

[project.urls]
"Source Code" = "https://github.com/digitalfabrik/integreat-compass"
"Issues" = "https://github.com/digitalfabrik/integreat-compass/issues"

[tool.setuptools]
script-files = ["integreat_compass/integreat-compass-cli"]
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
version = { attr = "integreat_compass.__version__" }

[tool.setuptools.packages.find]
include = ["integreat_compass*"]

[tool.bumpver]
current_version = "2023.3.0"
version_pattern = "YYYY.MM.INC0[-TAG]"
commit_message = """
Bump version to {new_version}

[skip ci]
"""


[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"integreat_compass/__init__.py" = [
    '__version__ = "{version}"',
]
"docs/src/conf.py" = [
    'release = "{version}"',
]

[tool.black]
skip-magic-trailing-comma = true

[tool.djlint]
profile="django"

[tool.isort]
profile = "black"
order_by_type = false

[tool.pylint.main]
jobs = 0
load-plugins = [
    "pylint_django",
    "pylint_per_file_ignores",
    "pylint.extensions.code_style",
    "pylint.extensions.comparetozero",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.docparams",
    "pylint.extensions.emptystring",
    "pylint.extensions.for_any_all",
]
enable = [
    "consider-using-augmented-assign",
]
disable = [
    "consider-using-namedtuple-or-dataclass",
    "consider-using-tuple",
]
recursive = true
ignore-paths = [
  ".venv",
  "node_modules",
  "build",
]
fail-on = "I"
django-settings-module="integreat_compass.core.settings"

[tool.pylint.design]
max-args = 7
max-attributes = 7
max-branches = 12
max-locals = 15
max-parents = 7

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "line-too-long",
    "too-many-lines",
    "missing-module-docstring",
    "no-member",
    "unsupported-binary-operation",
    "deprecated-module",
]
enable = [
    "useless-suppression"
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint-per-file-ignores]
"/tests/"="unused-argument,missing-function-docstring"
